<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ibm.cloud</groupId>
	<artifactId>authors-junit</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	
    <properties>
        <!-- Compiler -->
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- exclude
		<version.download-maven-plugin>1.4.0</version.download-maven-plugin> -->	
		<!-- Zipkin user feature download link -->
        <zipkin.usr.feature>https://github.com/WASdev/sample.opentracing.zipkintracer/releases/download/1.2/liberty-opentracing-zipkintracer-1.2-sample.zip</zipkin.usr.feature> 
	</properties>
   
	<dependencies>
		<!-- NEED FOR TRACING -->
	    <dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- NEED FOR TRACING -->
		<dependency>
			<groupId>org.eclipse.microprofile</groupId>
			<artifactId>microprofile</artifactId>
			<version>3.2</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>
		<!-- JUnit Test --> 
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.0.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.0.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.8.0</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.cxf/cxf-rt-rs-mp-client -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-mp-client</artifactId>
			<version>3.3.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>authors-junit</finalName>
        <!--Plugins -->
        <plugins>  
		    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<!-- tag::mavenCompiler[] -->
				<configuration>
                	<source>1.8</source>
					<target>1.8</target>
            	</configuration>
				<!-- end::tag::mavenCompiler[] -->
            </plugin>
            <!-- Enable liberty-maven plugin -->
            <!-- tag::libertyMavenPlugin[] -->
            <plugin>
                <groupId>io.openliberty.tools</groupId>
                <artifactId>liberty-maven-plugin</artifactId>
				<version>3.1</version>
				<!-- tag::libertyMavenConfiguration[] -->
				<configuration>
                	<serverName>authorsDevJUnitServer</serverName>
					<configFile>liberty/server.xml</configFile>
            	</configuration>
				<!-- end::libertyMavenConfiguration[] -->
            </plugin>
            <!-- end::libertyMavenPlugin[] -->
            <!-- Enable liberty-maven-plugin -->
			<plugin>
				<artifactId>maven-sureface-plugin</artifactId>
				<version>2.19.1</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.0.3</version>
					</dependency>
				</dependencies>
			</plugin>
        </plugins>
	</build>

</project>